archive/old-infra/networking/adguard/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home
  namespace: adguard
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-home
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: adguard.susdomain.name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard-home-web
            port:
              number: 3000
  tls:
  - hosts:
    - adguard.susdomain.name
    secretName: adguard-tls
